codama-syn-helpers/tests/meta/as_verbatim/from_expr.fail.stderr
error: expected verbatim
 --> tests/meta/as_verbatim/from_expr.fail.rs:3:15
  |
3 | #[as_verbatim("hello")]
  |               ^^^^^^^
